--- a/_includes/_partials/header.html
+++ b/_includes/_partials/header.html
@@ -78,4 +78,4 @@
 </nav>
 
 {% include _third-party/adsense/adsense.html %}
-{% include _custom/header.html %}
+<!-- {% include _custom/header.html %} -->
