--- a/_includes/_third-party/adsense/adsense.html
+++ b/_includes/_third-party/adsense/adsense.html
@@ -1,4 +1,4 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
     google_ad_client: "ca-pub-5444614422000132",
@@ -6,3 +6,4 @@
   });
 </script>
 
+ -->
